@@ -9,6 +9,7 @@ by Alex Rabe & NextGEN DEV Team
 = V1.7.4 - sooon =
 * Bugfix : Rework jQuery Cycle slideshow for IE compat reason (THX to Justin Dickenson)
 * Bugfix : Resize only larger images in slideshow
+* Bugfix : Improved image format detection in gd.thumbnail class (THX to Kupar.b)
 
 = V1.7.3 - 20.1.2011 =
 * NEW : Introduce plugin health check for conflicts with other plugins/themes
